--- a/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
@@ -34,17 +34,31 @@ transformerConfig:
           steps:
             - sort:
                 - column: row_number
-                  order: DESC
+                  order: ASC
             - renameColumns:
                 row_number: rank
                 id: driver_id
-            - selectColumns: [driver_id, name, rank]
       - tableJoin:
           leftTable: driver_table
           rightTable: driver_feature_table
           outputTable: result_table
           how: LEFT
           onColumns: [driver_id, name]
+      - tableTransformation:
+          inputTable: result_table
+          outputTable: result_table
+          steps:
+            - updateColumns:
+                - column: is_weekend
+                  expression: IsWeekend(driver_table.Col('eta'), 'Asia/Jakarta')
+                - column: day_of_week
+                  expression: DayOfWeek(driver_table.Col('eta'), 'Asia/Jakarta')
+                - column: pretty_date
+                  expression: FormatTimestamp(driver_table.Col('eta'), 'Asia/Jakarta', '2006-01-02')
+                - column: datetime_parsed
+                  expression: ParseDateTime(driver_table.Col('pickup_time'), driver_table.Col('pickup_timezone'), '2006-01-02 15:04:05')
+                - column: cumulative_fare
+                  expression: CumulativeValue(driver_table.Col('fare'))
       - tableTransformation:
           inputTable: result_table
           outputTable: result_table
@@ -60,6 +74,11 @@ transformerConfig:
                   driver_feature_1,
                   driver_feature_2,
                   driver_feature_3,
+                  is_weekend,
+                  day_of_week,
+                  pretty_date,
+                  datetime_parsed,
+                  cumulative_fare,
                 ]
     outputs:
       - jsonOutput:
