Bigtable credentials is in base64 form

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -166,7 +166,7 @@ spec:
             value: {{ .Values.merlin.transformer.feast.bigtableStorage | toJson | quote }}
           {{- end }}
           - name: FEAST_BIGTABLE_CREDENTIAL
-            value: {{ .Values.merlin.transformer.feast.bigtableCredential | quote}}
+            value: {{ .Values.merlin.transformer.feast.bigtableCredential}}
           - name: DEFAULT_FEAST_SOURCE
             value: {{ .Values.merlin.transformer.feast.defaultFeastSource}}
           - name: FEAST_CORE_URL
