Standard Transformer serving directly from Bigtable (#204)
* Direct storage client for bigtable

* Add doc string to exported methods

* Update unit test for bigtable storage

* Add merlin integration for bigtable direct storage

* Fix mapping on bigtable encoder initialization

* Fix failed test

* Store feature types in bigtable encoder for fast lookup

* Add option for user to use their own service account to connect to bigtable

* Fix helm template

* Bigtable credentials is in base64 form

* Regenerate proto

* Add more test GetOnlineFeatures function for bigtable and redis, adding more documentation

* Fix comment

Co-authored-by: Khor Shu Heng <khor.heng@go-jek.com>
Co-authored-by: Tio Pramayudi <tio.pramayudi@gojek.com>

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -165,6 +165,8 @@ spec:
           - name: FEAST_BIG_TABLE_CONFIG
             value: {{ .Values.merlin.transformer.feast.bigtableStorage | toJson | quote }}
           {{- end }}
+          - name: FEAST_BIGTABLE_CREDENTIAL
+            value: {{ .Values.merlin.transformer.feast.bigtableCredential}}
           - name: DEFAULT_FEAST_SOURCE
             value: {{ .Values.merlin.transformer.feast.defaultFeastSource}}
           - name: FEAST_CORE_URL
