--- a/api/pkg/transformer/pipeline/testdata/valid_feast_preprocess.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_feast_preprocess.yaml
@@ -24,6 +24,9 @@ transformerConfig:
               - name: driver_feature_2
                 valueType: INT64
                 defaultValue: "0"
+              - name: driver_feature_3
+                valueType: STRING_LIST
+                defaultValue: '["A", "B", "C", "D", "E"]'
     transformations:
       - tableTransformation:
           inputTable: driver_table
@@ -59,6 +62,7 @@ transformerConfig:
                   "customer_id",
                   "driver_feature_1",
                   "driver_feature_2",
+                  "driver_feature_3",
                 ]
     outputs:
       - jsonOutput:
