refactor period to periodType

--- a/python/sdk/test/transformer/standard_transformer_no_feast.yaml
+++ b/python/sdk/test/transformer/standard_transformer_no_feast.yaml
@@ -22,7 +22,7 @@ transformerConfig:
         - name: "daily_cycle"
           cyclicalEncoderConfig:
             byEpochTime:
-              period: "DAY"
+              periodType: "DAY"
     transformations:
       - tableTransformation:
           inputTable: driver_table
