--- a/.github/workflows/python-sdk.yml
+++ b/.github/workflows/python-sdk.yml
@@ -1,6 +1,33 @@
-name: publish-python-sdk
-on: push
+name: Python SDK CI Workflow
+on:
+  push:
+    branches: 
+    - main 
+    - v1beta1  # TODO: remove v1beta1
+  pull_request:
+    branches: 
+    - main 
+    - v1beta1  # TODO: remove v1beta1
 jobs:
+  test-python-sdk:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        working-directory: ./python/sdk
+        run: |
+          pip install mypy==0.812 pipenv
+          make setup
+      - name: Unit test Python SDK
+        env:
+          E2E_USE_GOOGLE_OAUTH: false
+        working-directory: ./python/sdk
+        run: make unit-test
+
+
   publish-python-sdk:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
