Execute unit-test for batch predictor in CI

--- a/.github/workflows/batch-predictor.yml
+++ b/.github/workflows/batch-predictor.yml
@@ -23,7 +23,7 @@ jobs:
           make setup
       - name: Run batch-predictor test
         working-directory: ./python/batch-predictor
-        run: make test
+        run: make unit-test
 
   publish-pyspark-base-docker:
     runs-on: ubuntu-latest
