Fix incorrect job dependency

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -182,7 +182,7 @@ jobs:
 
   publish-transformer-docker:
     runs-on: ubuntu-latest
-    needs: integration-test-api
+    needs: test-api
     steps:
       - uses: actions/checkout@v2
       - name: Get branch name
