--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -9,74 +9,10 @@ on:
     - main 
     - v1beta1  # TODO: remove v1beta1
 
+env:
+  ARTIFACT_RETENTION_DAYS: 7
+
 jobs:
-  lint-ui:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout to the target branch
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-      - name: Install dependencies
-        run: make init-dep-ui
-      - name: Lint UI files
-        run: make lint-ui
-
-  lint-api:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - name: Install dependencies
-        run: |
-          make setup
-          make init-dep-api
-      - name: Lint API files
-        run: make lint-api
-
-  test-ui:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout to the target branch
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-      - name: Install dependencies
-        run: make init-dep-ui
-      - name: Test UI files
-        run: make test-ui
-
-  test-api:
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:12.4
-        env:
-          POSTGRES_DB: merlin
-          POSTGRES_USER: merlin
-          POSTGRES_PASSWORD: merlin
-        ports:
-          - 5432:5432
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - name: Install dependencies
-        run: |
-          make setup
-          make init-dep-api
-      - name: Test API files
-        env:
-          POSTGRES_HOST: localhost
-          POSTGRES_DB: merlin
-          POSTGRES_USER: merlin
-          POSTGRES_PASSWORD: merlin
-        run: make it-test-api-ci
 
   test-batch-predictor:
     runs-on: ubuntu-latest
@@ -131,26 +67,146 @@ jobs:
   build-ui:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout to the target branch
+        uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache YARN
+        uses: actions/cache@v3
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Cache Node Modules
+        uses: actions/cache@v2
+        with:
+          path: ui/node_modules
+          key: |
+            ${{ runner.os }}-modules-${{ hashFiles('ui/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-modules-
       - name: Install dependencies
         run: make init-dep-ui
+      - name: Lint UI files
+        run: make lint-ui
+      - name: Test UI files
+        run: make test-ui
       - name: Build UI static files
         run: make build-ui
+      - name: Publish UI Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-ui-dist
+          path: ui/build/
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-api:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12.4
+        env:
+          POSTGRES_DB: merlin
+          POSTGRES_USER: merlin
+          POSTGRES_PASSWORD: merlin
+        ports:
+          - 5432:5432
+    needs:
+    - build-ui
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Install dependencies
-        run: make init-dep-api
+        run: |
+          make setup
+          make init-dep-api
+      - name: Lint API files
+        run: make lint-api
+      - name: Test API files
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_DB: merlin
+          POSTGRES_USER: merlin
+          POSTGRES_PASSWORD: merlin
+        run: make it-test-api-ci
       - name: Build API server
         run: make build-api
+      - name: Download UI Dist
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-ui-dist
+          path: ui/build
+      - name: Get branch name
+        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
+      - name: Build API Docker
+        run: docker build -t merlin-api:${branch_name} -f Dockerfile
+      - name: Save API Docker
+        run: docker image save \
+            --output merlin-api.${branch_name}.tar \
+            merlin-api:${branch_name}
+      - name: Publish API Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-api.${branch_name}.tar
+          path: merlin-api.${branch_name}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+  build-batch-predictor:
+    runs-on: ubuntu-latest
+    needs:
+    - test-batch-predictor
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get branch name
+        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
+      - name: Build Batch Predictor Docker
+        run: docker build -t merlin-pyspark-base:${branch_name} -f python/batch-predictor/docker/base.Dockerfile
+      - name: Save Batch Predictor Docker
+        run: docker image save \
+            --output merlin-pyspark-base.${branch_name}.tar \
+            merlin-pyspark-base:${branch_name}
+      - name: Publish Batch Predictor Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-pyspark-base.${branch_name}.tar
+          path: merlin-pyspark-base.${branch_name}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+  build-pyfunc-server:
+    runs-on: ubuntu-latest
+    needs:
+    - test-pyfunc-server
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get branch name
+        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
+      - name: Build Pyfunc Server Docker
+        run: docker build -t merlin-pyfunc-base:${branch_name} -f python/pyfunc-server/base.Dockerfile
+      - name: Save Pyfunc Server Docker
+        run: docker image save \
+            --output merlin-pyfunc-base.${branch_name}.tar \
+            merlin-pyfunc-base:${branch_name}
+      - name: Publish Pyfunc Server Docker Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: merlin-pyfunc-base.${branch_name}.tar
+          path: merlin-pyfunc-base.${branch_name}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
     runs-on: ubuntu-latest
@@ -159,112 +215,42 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Install dependencies
         run: make init-dep-api
-      - name: Build API server
+      - name: Build Standard Transformer
         run: make build-transformer
-
-  publish-api-docker:
-    runs-on: ubuntu-latest
-    needs: test-api
-    steps:
-      - uses: actions/checkout@v2
       - name: Get branch name
         run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
-      - name: Build and push Merlin Docker image
-        uses: docker/build-push-action@v1
+      - name: Build Standard Transformer Docker
+        run: docker build -t merlin-transformer:${branch_name} -f transformer.Dockerfile
+      - name: Save Standard Transformer Docker
+        run: docker image save \
+            --output merlin-transformer.${branch_name}.tar \
+            merlin-transformer:${branch_name}
+      - name: Publish Standard Transformer Docker Artifact
+        uses: actions/upload-artifact@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-          registry: ghcr.io
-          build_args: GITHUB_TOKEN=${{ secrets.DSP_REPO_TOKEN }}
-          tags: ${{ env.branch_name }}
-
-  publish-transformer-docker:
-    runs-on: ubuntu-latest
-    needs: test-api
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
-      - name: Build and push Merlin Standard Transformer Docker image
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-          registry: ghcr.io
-          repository: gojek/merlin-transformer
-          build_args: BRANCH=${{ github.ref }},REVISION=${{ github.sha }},VERSION=${{ github.ref }}
-          dockerfile: transformer.Dockerfile
-          tags: ${{ env.branch_name }}
-
-  publish-batch-predictor-docker:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
-      - name: Build and push PySpark Base Docker image
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-          registry: ghcr.io
-          repository: gojek/merlin-pyspark-base
-          path: python
-          dockerfile: python/batch-predictor/docker/base.Dockerfile
-          tags: ${{ env.branch_name }}
-
-  publish-pyfunc-server-docker:
-    runs-on: ubuntu-latest
-    needs:
-    - test-pyfunc-server
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
-      - name: Build and push PyFunc Base Docker image
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
-          registry: ghcr.io
-          repository: gojek/merlin-pyfunc-base
-          path: python
-          dockerfile: python/pyfunc-server/base.Dockerfile
-          tags: ${{ env.branch_name }}
-
-  publish-python-sdk:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-      - name: Install dependencies
-        working-directory: ./python/sdk
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        working-directory: ./python/sdk
-        run: |
-          tag=$(git describe --tags --always --first-parent)
-          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag//v}"`\"|g" ./merlin/version.py
-          python setup.py sdist bdist_wheel
-          twine upload dist/*
+          name: merlin-transformer.${branch_name}.tar
+          path: merlin-transformer.${branch_name}.tar
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   e2e-test:
     runs-on: ubuntu-latest
-    # needs: 
-    # - publish-api-docker
-    # - publish-batch-predictor-docker
-    # - publish-transformer-docker
-    # - publish-pyfunc-server-docker
+    needs: 
+    - build-api
+    - build-batch-predictor
+    - build-pyfunc-server
+    - build-transformer
+    env:
+      LOCAL_REGISTRY: registry.localhost:5000
     steps:
       - uses: actions/checkout@v2
         with:
@@ -275,6 +261,55 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Get branch name
+        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
+      - name: Download API Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-api.${branch_name}.tar
+      - name: Download Batch Predictor Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-pyspark-base.${branch_name}.tar
+      - name: Download Pyfunc Server Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-pyfunc-base.${branch_name}.tar
+      - name: Download Standard Transformer Docker Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: merlin-transformer.${branch_name}.tar
+      - name: Publish images to local registry
+        env:
+          DOCKER_REPOSITORY: ${{ env.LOCAL_REGISTRY }}/${{ github.repository }}
+        run: |
+          # Merlin API
+          docker image load --input merlin-api.${branch_name}.tar
+          docker tag \
+            merlin-api:${branch_name} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-api:${branch_name}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-api:${branch_name}
+
+          # Batch Predictor
+          docker image load --input merlin-pyspark-base.${branch_name}.tar
+          docker tag \
+             merlin-pyspark-base:${branch_name} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${branch_name}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${branch_name}
+          
+          # Pyfunc Server
+          docker image load --input merlin-pyfunc-base.${branch_name}.tar
+          docker tag \
+            merlin-pyfunc-base:${branch_name} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${branch_name}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${branch_name}
+
+          # Standard Transformer
+          docker image load --input  merlin-transformer.${branch_name}.tar
+          docker tag \
+             merlin-transformer:${branch_name} \
+            ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${branch_name}
+          docker push ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${branch_name}
       - uses: AbsaOSS/k3d-action@v2
         name: "Create Test Cluster"
         with:
@@ -286,7 +321,7 @@ jobs:
             --agents 3
             --no-lb
             --image rancher/k3s:v1.22.6-k3s1
-            --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
+            --k3s-arg "--no-deploy=traefik,metrics-server@server:*"
       - name: Setup cluster
         working-directory: merlin/scripts/e2e/
         run: ./setup-cluster.sh
