--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -315,19 +315,19 @@ jobs:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-api.${branch_name}.tar
+          name: merlin-api.${{branch_name}}.tar
       - name: Download Batch Predictor Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyspark-base.${branch_name}.tar
+          name: merlin-pyspark-base.${{branch_name}}.tar
       - name: Download Pyfunc Server Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base.${branch_name}.tar
+          name: merlin-pyfunc-base.${{branch_name}}.tar
       - name: Download Standard Transformer Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-transformer.${branch_name}.tar
+          name: merlin-transformer.${{branch_name}}.tar
       - name: Publish images to local registry
         env:
           DOCKER_REPOSITORY: ${{ env.LOCAL_REGISTRY }}/${{ github.repository }}
