--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   ARTIFACT_RETENTION_DAYS: 7
+  VERSION: ${{ GITHUB_REF_NAME }}
 
 jobs:
 
@@ -212,51 +213,45 @@ jobs:
         with:
           name: merlin-ui-dist
           path: ui/build
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
       - name: Build API Docker
-        run: docker build -t merlin-api:${branch_name} -f Dockerfile .
+        run: docker build -t merlin-api:${{ env.VERSION }} -f Dockerfile .
       - name: Save API Docker
-        run: docker image save --output merlin-api.${branch_name}.tar merlin-api:${branch_name}
+        run: docker image save --output merlin-api.${{ env.VERSION }}.tar merlin-api:${{ env.VERSION }}
       - name: Publish API Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-api.${branch_name}.tar
-          path: merlin-api.${branch_name}.tar
+          name: merlin-api.${{ env.VERSION }}.tar
+          path: merlin-api.${{ env.VERSION }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-batch-predictor:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
       - name: Build Batch Predictor Docker
-        run: docker build -t merlin-pyspark-base:${branch_name} -f python/batch-predictor/docker/base.Dockerfile python
+        run: docker build -t merlin-pyspark-base:${{ env.VERSION }} -f python/batch-predictor/docker/base.Dockerfile python
       - name: Save Batch Predictor Docker
-        run: docker image save --output merlin-pyspark-base.${branch_name}.tar merlin-pyspark-base:${branch_name}
+        run: docker image save --output merlin-pyspark-base.${{ env.VERSION }}.tar merlin-pyspark-base:${{ env.VERSION }}
       - name: Publish Batch Predictor Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyspark-base.${branch_name}.tar
-          path: merlin-pyspark-base.${branch_name}.tar
+          name: merlin-pyspark-base.${{ env.VERSION }}.tar
+          path: merlin-pyspark-base.${{ env.VERSION }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-pyfunc-server:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
       - name: Build Pyfunc Server Docker
-        run: docker build -t merlin-pyfunc-base:${branch_name} -f python/pyfunc-server/base.Dockerfile python
+        run: docker build -t merlin-pyfunc-base:${{ env.VERSION }} -f python/pyfunc-server/base.Dockerfile python
       - name: Save Pyfunc Server Docker
-        run: docker image save --output merlin-pyfunc-base.${branch_name}.tar merlin-pyfunc-base:${branch_name}
+        run: docker image save --output merlin-pyfunc-base.${{ env.VERSION }}.tar merlin-pyfunc-base:${{ env.VERSION }}
       - name: Publish Pyfunc Server Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyfunc-base.${branch_name}.tar
-          path: merlin-pyfunc-base.${branch_name}.tar
+          name: merlin-pyfunc-base.${{ env.VERSION }}.tar
+          path: merlin-pyfunc-base.${{ env.VERSION }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
@@ -278,17 +273,15 @@ jobs:
         run: make init-dep-api
       - name: Build Standard Transformer
         run: make build-transformer
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
       - name: Build Standard Transformer Docker
-        run: docker build -t merlin-transformer:${branch_name} -f transformer.Dockerfile .
+        run: docker build -t merlin-transformer:${{ env.VERSION }} -f transformer.Dockerfile .
       - name: Save Standard Transformer Docker
-        run: docker image save --output merlin-transformer.${branch_name}.tar merlin-transformer:${branch_name}
+        run: docker image save --output merlin-transformer.${{ env.VERSION }}.tar merlin-transformer:${{ env.VERSION }}
       - name: Publish Standard Transformer Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-transformer.${branch_name}.tar
-          path: merlin-transformer.${branch_name}.tar
+          name: merlin-transformer.${{ env.VERSION }}.tar
+          path: merlin-transformer.${{ env.VERSION }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   e2e-test:
@@ -315,50 +308,50 @@ jobs:
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-api.${{branch_name}}.tar
+          name: merlin-api.${{ env.VERSION }}.tar
       - name: Download Batch Predictor Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyspark-base.${{branch_name}}.tar
+          name: merlin-pyspark-base.${{ env.VERSION }}.tar
       - name: Download Pyfunc Server Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{branch_name}}.tar
+          name: merlin-pyfunc-base.${{ env.VERSION }}.tar
       - name: Download Standard Transformer Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-transformer.${{branch_name}}.tar
+          name: merlin-transformer.${{ env.VERSION }}.tar
       - name: Publish images to local registry
         env:
           DOCKER_REPOSITORY: ${{ env.LOCAL_REGISTRY }}/${{ github.repository }}
         run: |
           # Merlin API
-          docker image load --input merlin-api.${branch_name}.tar
+          docker image load --input merlin-api.${{ env.VERSION }}.tar
           docker tag \
-            merlin-api:${branch_name} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-api:${branch_name}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-api:${branch_name}
+            merlin-api:${{ env.VERSION }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ env.VERSION }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ env.VERSION }}
 
           # Batch Predictor
-          docker image load --input merlin-pyspark-base.${branch_name}.tar
+          docker image load --input merlin-pyspark-base.${{ env.VERSION }}.tar
           docker tag \
-             merlin-pyspark-base:${branch_name} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${branch_name}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${branch_name}
+             merlin-pyspark-base:${{ env.VERSION }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ env.VERSION }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ env.VERSION }}
           
           # Pyfunc Server
-          docker image load --input merlin-pyfunc-base.${branch_name}.tar
+          docker image load --input merlin-pyfunc-base.${{ env.VERSION }}.tar
           docker tag \
-            merlin-pyfunc-base:${branch_name} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${branch_name}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${branch_name}
+            merlin-pyfunc-base:${{ env.VERSION }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ env.VERSION }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ env.VERSION }}
 
           # Standard Transformer
-          docker image load --input  merlin-transformer.${branch_name}.tar
+          docker image load --input  merlin-transformer.${{ env.VERSION }}.tar
           docker tag \
-             merlin-transformer:${branch_name} \
-            ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${branch_name}
-          docker push ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${branch_name}
+             merlin-transformer:${{ env.VERSION }} \
+            ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ env.VERSION }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ env.VERSION }}
       - uses: AbsaOSS/k3d-action@v2
         name: "Create Test Cluster"
         with:
