Update istio configurations

--- a/scripts/e2e/config/istio/istiod.yaml
+++ b/scripts/e2e/config/istio/istiod.yaml
@@ -4,10 +4,11 @@ global:
   omitSidecarInjectorConfigMap: false
 
 meshConfig:
-  enableTracing: true
+  enableTracing: false
   enableAutoMtls: false
 
 pilot:
+  autoscaleEnabled: false
   resources:
     requests:
       cpu: 10m
